# Algorithm_trainning

./: CMakeLists.txt  README.md
AcWing/: BuyCandy.cpp  FindFourInt.cpp  SplitInt.cpp
LeetCode_Everyday_c/: Max_SubArr.c  canPartitionKSubsets.c  coin_change.c  largestIsland.c  linked_list.c  maximumBags.c  maximumSwap.c  palindromic_substring.c  rotatedDigits.c  trimBST.c
LeetCode_Everyday_cpp/: advantageCount.cpp  atMostNGivenDigitSet.cpp  canTransform.cpp  countDigitOne.cpp  kthGrammar.cpp  maxChunksToSorted.cpp  possibleBipartition.cpp  reformatNumber.cpp  scoreOfParentheses.cpp  subdomainVisits.cpp  threeEqualParts.cpp
LoGu/: cowHouse.cpp
csp/: MeanGroup.cpp  carpet_cover.cpp  fact.cpp  point-dist.cpp  polynorm_maker.cpp  reverse_pair.cpp
csp/202203/: uninit.cpp
csp/202206/: norm.cpp  small_map.cpp
csp/202209/: HowToEncode.cpp  antipand.cpp  in.txt  poster.cpp
csp/BigInt/: BigIntMul.cpp  leet.cpp
csp/NOIP/2005/: in.txt  loop.cpp
csp/train/: MingRand.cpp  reverse_pair.cpp
csp/train/BigInt/: bigInt.cpp
