cmake_minimum_required(VERSION 3.21)
project(Algorithm_trainning)

set(CMAKE_CXX_STANDARD 14)

add_executable(subdomainVisits LeetCode_Everyday_cpp/subdomainVisits.cpp)
add_executable(threeEqualParts LeetCode_Everyday_cpp/threeEqualParts.cpp)
add_executable(advantageCount LeetCode_Everyday_cpp/advantageCount.cpp)
add_executable(scoreOfParentheses LeetCode_Everyday_cpp/scoreOfParentheses.cpp)