cmake_minimum_required(VERSION 3.21)
project(Algorithm_trainning)

set(CMAKE_CXX_STANDARD 14)

add_executable(subdomainVisits LeetCode_Everyday_cpp/subdomainVisits.cpp)
add_executable(threeEqualParts LeetCode_Everyday_cpp/threeEqualParts.cpp)
add_executable(advantageCount LeetCode_Everyday_cpp/advantageCount.cpp)
add_executable(scoreOfParentheses LeetCode_Everyday_cpp/scoreOfParentheses.cpp)
add_executable(MingRand csp/MingRand.cpp)
add_executable(polynorm_maker csp/polynorm_maker.cpp)
add_executable(BigIntMul csp/BigInt/BigIntMul.cpp)
add_executable(bigInt csp/BigInt/bigInt.cpp)
add_executable(fact csp/fact.cpp)
add_executable(leet csp/BigInt/leet.cpp)
add_executable(MeanGroup csp/MeanGroup.cpp)
add_executable(carpet_cover csp/carpet_cover.cpp)
add_executable(reverse_pair csp/reverse_pair.cpp)
add_executable(point-dist csp/point-dist.cpp)